tests/baselines/reference/recursiveProperties.errors.txt
tests/cases/compiler/recursiveProperties.ts(6,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/compiler/recursiveProperties.ts (1 errors) ====
    class A {
        get testProp() { return this.testProp; }
    }
    
    class B {
        set testProp(value:string) { this.testProp = value; }
            ~~~~~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }